--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,137 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Harly Web</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hello Stranger, I'm Harly. Nice To Meet You</title>
+  <meta name="description" content="Personal portfolio website of Harly - Profile, Projects, and contact">
 </head>
 <body>
-    
+    <!-- Header -->
+        <header style="background-color:#5E6472; padding: 30px 0; text-align: center;">
+            <nav aria-label="Primary" style="max-width:1200px; margin:0 auto; display:flex; justify-content:center; gap:40px;">
+                <a href="#home" style="color:#ffffff; font-weight:600; text-decoration:none;">Home</a>
+                <a href="#about" style="color:#ffffff; font-weight:600; text-decoration:none;">About Me</a>
+                <a href="#projects" style="color:#ffffff; font-weight:600; text-decoration:none;">Projects</a>
+                <a href="#contact" style="color:#ffffff; font-weight:600; text-decoration:none;">Contact</a>
+            </nav>
+        </header>
+    <!-- Main Content -->
+        <main style="max-width:1200px; margin:0 auto; padding:20px;">
+
+    <!-- HOME -->
+        <section id="home"style="margin: 80px auto; max-width: 800px; font-family: Arial, sans-serif; line-height: 1.8; color: #333; text-align: center;">
+        <hr style="width: 80px; border: 1px solid #A8C3A7; margin: 0 auto 30px auto;">
+          <img src="/assets/images/profile.jpg" height="250" width="250" style="object-fit: cover; border-radius: 50%;" alt="Harly">
+        <h2 style="text-align: center; font-size: 28px; margin-bottom: 20px; color: #1f2937;">Hello Stranger, I'm Harly</h2>
+            <p>Welcome to My Portfolio. I'm a beginner web developer who loves learning how websites are built from the ground up.Through this website, I aim to share my journey, projects, and growth in the world of web development.</p>
+        </section>
+        <hr style="margin-top: 40px; margin-bottom: 40px;">
+
+    <!-- ===== ABOUT ME SECTION ===== -->
+<section id="about" style="margin: 80px auto; max-width: 800px; font-family: Arial, sans-serif; line-height: 1.8; color: #333;">
+  <h2 style="text-align: center; font-size: 28px; margin-bottom: 20px; color: #1f2937;">About Me</h2>
+  <hr style="width: 80px; border: 1px solid #A8C3A7; margin: 0 auto 30px auto;">
+
+  <p style="text-align: justify; font-size: 16px; margin-bottom: 20px;">
+    Hello! My name is <strong>Harly</strong>, and I’m a passionate learner currently exploring the world of 
+    <strong>Software Engineering</strong>. I’m deeply interested in how technology can 
+    create solutions that are not only functional but also elegant and user-friendly.
+  </p>
+
+  <h3 style="font-size: 20px; color: #2f3e46; margin-top: 30px;">Education</h3>
+  <ul style="margin-left: 25px; font-size: 16px;">
+    <li><strong>Student Software Engineer</strong>- revou</li>
+    <li>Currently learning HTML and CSS as part of my foundation in Software Engineer.</li>
+  </ul>
+
+  <h3 style="font-size: 20px; color: #2f3e46; margin-top: 30px;">Experience</h3>
+  <ul style="margin-left: 25px; font-size: 16px;">
+    <li>Currently building personal projects to strengthen my practical understanding of web technologies.</li>
+    <li>Participated in collaborative learning communities and coding exercises to develop teamwork and problem-solving skills.</li>
+  </ul>
+
+  <h3 style="font-size: 20px; color: #2f3e46; margin-top: 30px;">Skills</h3>
+  <ul style="margin-left: 25px; font-size: 16px;">
+    <li>Microsoft Excel and Word</li>
+    <li>HTML5 & CSS (on learning)</li>
+    <li>Photography</li>
+    <li>Version Control using Git & GitHub</li>
+  </ul>
+
+  <h3 style="font-size: 20px; color: #2f3e46; margin-top: 30px;">Interests</h3>
+  <p style="text-align: justify; font-size: 16px;">
+    I’m particularly interested in <strong>Software Engineering</strong> and how clean, accessible 
+    interfaces can enhance user experience. In my spare time, I enjoy exploring new  ideas, learning from 
+    online coding communities, and experimenting with creative web layouts.
+  </p>
+
+  <p style="margin-top: 25px; text-align: center; font-style: italic; color: #555;">
+    “Code is not just about functionality — it’s about expressing ideas beautifully through logic and design.”
+  </p>
+</section>
+
+<hr style="margin-top: 40px; margin-bottom: 40px;">
+
+<!-- PROJECT SECTION -->
+<section id="projects" style="margin: 80px auto; max-width: 800px; font-family: Arial, sans-serif; line-height: 1.8; color: #333;">
+  <h2 style="text-align: center; font-size: 28px; margin-bottom: 20px; color: #1f2937;">My Projects</h2>
+  <hr style="width: 80px; border: 1px solid #A8C3A7; margin: 0 auto 30px auto;">
+  <p>
+    While I’m still at the early stage of my software engineering journey, this portfolio represents more than just a starting point. it’s a promise of what’s to come.
+    <p>Every line of code I write and every concept I learn brings me closer to becoming a developer who builds with precision, creativity, and purpose. Although I don’t have major projects to showcase yet, this space will continue to grow as I explore new technologies, experiment with ideas, and turn imagination into working solutions.</p>
+    <p>Each future project added here will reflect not only my technical progress but also my commitment to thoughtful design, clean code, and continuous learning.
+  </p>
+<hr style="margin: 60px auto; width: 80%; border: none; border-top: 1px solid #ccc;">
+
+<!-- ===== CONTACT ===== -->
+<section id="contact" style="margin-top: 5px;">
+  <div style="max-width: 600px; 
+    background-color: #7e7c7c; 
+    margin: 50px auto; 
+    padding: 40px; 
+    border-radius: 8px; 
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1); 
+    font-family: Arial, sans-serif;">
+    <h2 style="text-align: left;">Contact Me</h2>
+    <hr style="border: none; border-top: 1px solid #e5e5e5; margin-bottom: 25px;">
+    <p style="font-size: 15px; color: #222121; margin-bottom: 25px;">
+      If you’d like to collaborate, discuss ideas, or share your feedback, feel free to fill out the form below.
+    </p>
+
+    <form action="#" method="post" style="text-align: left;">
+      <label for="name" style="font-weight: bold;">Name:</label><br>
+      <input type="text" id="name" name="name" placeholder="Your name" 
+             style="width: 100%; padding: 10px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px;"><br>
+
+      <label for="email" style="font-weight: bold;">Email:</label><br>
+      <input type="email" id="email" name="email" placeholder="Your email"
+             style="width: 100%; padding: 10px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px;"><br>
+
+      <label for="message" style="font-weight: bold;">Message:</label><br>
+      <textarea id="message" name="message" rows="5" placeholder="Write your message here..."
+                style="width: 100%; padding: 10px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; resize: vertical;"></textarea><br>
+
+      <button type="submit" 
+              style="width: 100%; background-color: #1f2937; color: white; padding: 12px; font-size: 15px; border: none; border-radius: 5px; cursor: pointer;">
+        Send Messagee
+      </button>
+    </form>
+  </div>
+</section>
+</hr>
+  <!--FOOTER-->
+        <footer style="background:#5E6472; color:#FFFFFF; text-align:center; padding: 15px;">
+            <a href="https://www.instagram.com/harlyaaa/" target="_blank">
+            <img src="/assets/images/instagram.png" height="24" width="24" alt="Instagram">
+            </a>
+            <a href="https://www.linkedin.com/in/harlyanoor-5b334817a/" target="_blank">
+            <img src="/assets/images/linked.png" height="24" width="24" alt="LinkedIn">
+            </a>
+            <a href="https://github.com/mlitsec" target="_blank">
+            <img src="/assets/images/github.png" height="24" width="24" alt="GitHub">
+            </a>
+            <h4 style="margin-top: 5px;">© 2025 Harly</h4>
+        </footer>
 </body>
 </html>
