--- a/Index.html
+++ b/Index.html
@@ -22,7 +22,7 @@
     <!-- HOME -->
         <section id="home"style="margin: 80px auto; max-width: 800px; font-family: Arial, sans-serif; line-height: 1.8; color: #333; text-align: center;">
         <hr style="width: 80px; border: 1px solid #A8C3A7; margin: 0 auto 30px auto;">
-          <img src="/assets/images/profile.jpg" height="250" width="250" style="object-fit: cover; border-radius: 50%;" alt="Harly">
+          <img src="/milestone-1-mlitsec/assets/images/profile.jpg" height="250" width="250" style="object-fit: cover; border-radius: 50%;" alt="Harly">
         <h2 style="text-align: center; font-size: 28px; margin-bottom: 20px; color: #1f2937;">Hello Stranger, I'm Harly</h2>
             <p>Welcome to My Portfolio. I'm a beginner web developer who loves learning how websites are built from the ground up.Through this website, I aim to share my journey, projects, and growth in the world of web development.</p>
         </section>
@@ -123,15 +123,15 @@
   <!--FOOTER-->
         <footer style="background:#5E6472; color:#FFFFFF; text-align:center; padding: 15px;">
             <a href="https://www.instagram.com/harlyaaa/" target="_blank">
-            <img src="/assets/images/instagram.png" height="24" width="24" alt="Instagram">
+            <img src="/milestone-1-mlitsec/assets/images/instagram.png" height="24" width="24" alt="Instagram">
             </a>
             <a href="https://www.linkedin.com/in/harlyanoor-5b334817a/" target="_blank">
-            <img src="/assets/images/linked.png" height="24" width="24" alt="LinkedIn">
+            <img src="/milestone-1-mlitsec/assets/images/linked.png" height="24" width="24" alt="LinkedIn">
             </a>
             <a href="https://github.com/mlitsec" target="_blank">
-            <img src="/assets/images/github.png" height="24" width="24" alt="GitHub">
+            <img src="/milestone-1-mlitsec/assets/images/github.png" height="24" width="24" alt="GitHub">
             </a>
-            <h4 style="margin-top: 5px;">© 2025 Harly</h4>
+            <h4 style="margin-top: 5px;">© 2025 Harlyyy</h4>
         </footer>
 </body>
 </html>
