--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <a href="https://github.com/mlitsec" target="_blank">
             <img src="/milestone-1-mlitsec/assets/images/github.png" height="24" width="24" alt="GitHub">
             </a>
-            <h4 style="margin-top: 5px;">© 2025 Harlyyy</h4>
+            <h4 style="margin-top: 5px;">© 2025 Harly</h4>
         </footer>
 </body>
 </html>
